test/spec/return.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/return.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/return.wast:281:56: type stack size too small at return. got 0, expected at least 1
  (module (func $type-value-empty-vs-num (result f64) (return)))
                                                       ^^^^^^
assert_invalid error:
  third_party/testsuite/return.wast:285:55: type stack size too small at return. got 0, expected at least 1
  (module (func $type-value-void-vs-num (result f64) (return (nop))))
                                                      ^^^^^^
assert_invalid error:
  third_party/testsuite/return.wast:289:54: type mismatch at return. got i64, expected f64
  (module (func $type-value-num-vs-num (result f64) (return (i64.const 1))))
                                                     ^^^^^^
60/60 tests passed.
;;; STDOUT ;;)
